add a cute background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>LeetCode kids</title>
 </head>
 <body>
-    
+    <button id="spin">Spin me!</button>
+    <span class="arrow"></span>
+    <div class="container">
+        <div class="komo">Komo</div>
+        <div class="michael">Michael</div>
+        <div class="eve">Eve</div>
+        <div class="tommy">Tommy</div>
+        <div class="yuxin">Yuxin</div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
