add basic spinner shape

--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>LeetCode kids</title>
 </head>
 <body>
     <button id="spin">Spin me!</button>
-    <span class="arrow"></span>
+    <span class="arrow"><i class="add-shadow fas fa-arrow-down"></i></span>
     <div class="container">
-        <div class="komo">Komo</div>
-        <div class="michael">Michael</div>
-        <div class="eve">Eve</div>
-        <div class="tommy">Tommy</div>
-        <div class="yuxin">Yuxin</div>
+        <div class="one">Komo</div>
+        <div class="two">Michael</div>
+        <div class="three">Eve</div>
+        <div class="four">Tommy</div>
+        <div class="five">Yuxin</div>
+        <div class="six">Komo</div>
+        <div class="seven">Michael</div>
+        <div class="eight">Tommy</div>
     </div>
 
     <script src="index.js"></script>
 </body>
 </html>
+
