finish css spinner version

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <title>LeetCode kids</title>
 </head>
 <body>
-    <button id="spin">Spin me!</button>
+    <button id="start">Game!</button>
     <span class="arrow"><i class="add-shadow fas fa-arrow-down"></i></span>
     <div class="container">
-        <div class="one">Komo</div>
-        <div class="two">Michael</div>
-        <div class="three">Eve</div>
-        <div class="four">Tommy</div>
-        <div class="five">Yuxin</div>
-        <div class="six">Komo</div>
-        <div class="seven">Michael</div>
-        <div class="eight">Tommy</div>
+        <div class="spinner">
+            <div class="one">Komo</div>
+            <div class="two">Michael</div>
+            <div class="three">Eve</div>
+            <div class="four">Tommy</div>
+            <div class="five">Yuxin</div>
+            <div class="six">Komo</div>
+            <div class="seven">Michael</div>
+            <div class="eight">Tommy</div>
+        </div>
     </div>
 
     <script src="index.js"></script>
