--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>LeetCode kids</title>
 </head>
 <body>
+    <textarea name="user-input" class="user-input" id="user-input" cols="40" rows="1" placeholder="Input names. Separate by comma."></textarea>
     <button id="start">Game!</button>
     <span class="arrow"><i class="add-shadow fas fa-arrow-down"></i></span>
     <div class="container">
