--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <textarea spellcheck="false" name="user-input" class="user-input-tex-area" id="user-input" cols="40" rows="1" placeholder="Input names. Separate by comma."></textarea>
-    <button id="name-submit" onclick="setNames()">Add names!</button>
+    <!-- <button id="name-submit" onclick="setNames()">Add names!</button> -->
     <button id="start">Game!</button>
     <span class="arrow"><i class="add-shadow fas fa-arrow-down"></i></span>
     <div class="container">
@@ -23,8 +23,8 @@
     </div>
 
     <!-- d3 -->
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="index.js"></script>
+    <script src="https://d3js.org/d3.v6.js"></script>
+    <script src="v2.js"></script>
 </body>
 </html>
 
