add notes for V1 and V2 JS

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <!-- d3 -->
     <script src="https://d3js.org/d3.v6.js"></script>
+    <!-- Note: V1 can dynamically add pie slice, however names cannot be added dynamically (previous name cannot be deleted) -->
+    <!-- <script src="v1.js"></script> -->
+    <!-- Note: Currently using V2: Create a new pie every time when a name is inputted -->
     <script src="v2.js"></script>
 </body>
 </html>
