final touch and finish version 2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <div class="container">
         <div id="spinner"></div>
     </div>
+    <div class="manual">
+        <p>Comma: slice the pie</p>
+        <p>Enter: spin the pie</p>
+        <p>The more times you press, the faster it'll spin</p>
+    </div>
 
     <!-- d3 -->
     <script src="https://d3js.org/d3.v6.js"></script>
